--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         }
     },
     "require-dev": {
+        "ext-xdebug": "^3.0",
         "allure-framework/allure-phpunit": "~1.2.0",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "friendsofphp/php-cs-fixer": "~2.16.0",
@@ -50,6 +51,7 @@
         "phpcompatibility/php-compatibility": "^9.3",
         "phpmd/phpmd": "^2.8.0",
         "phpstan/phpstan": ">=0.12.3 <=0.12.23",
+        "phpunit/php-code-coverage": "^8.0.1",
         "phpunit/phpunit": "^9",
         "sebastian/phpcpd": "~5.0.0",
         "squizlabs/php_codesniffer": "~3.5.4"
